# applications.debuggers.debug-foundation.openipc.sve-probe-plugin

./: .gitmodules  README.md  socket_listener.py
listener/: CMakeLists.txt  Makefile  Readme.md  receiver.cpp  transmitter.cpp  transmitterInit.cpp  transmitterShift.cpp
listener/include/: receiver.h  shift.h  utils.h
listener/src/: receiver.cpp  shift.cpp  utils.cpp
reference-probe-plugin/: CMakeLists.txt  CMakePresets.json  README.md
reference-probe-plugin/example/: reference_plugin.cpp
reference-probe-plugin/include/: ActionOperations.h  BundleOperations.h  ErrorCodes.h  I2CDirectOperations.h  I2cCommandOperations.h  I2cDefinitions.h  InterfaceScanBulkOperations.h  JTAGDefinitions.h  JTAGPaddingOperations.h  JTAGPinsBasedOperations.h  JTAGRegisterBasedOperations.h  JTAGResetOperations.h  JTAGTriggerOperations.h  JtagStateBasedOperations.h  LoopOperations.h  PinOperations.h  ProbePlugin.h  ProbeTypes.h  SlotOperations.h  StateportOperations.h  TapStateMachineEncode.h  TraceOperations.h  TriggerResponse.h
reference-probe-plugin/socket/: receiver.cpp
reference-probe-plugin/test/: test.cpp
